--- a/app/StateStores.App.Blazor/_Imports.razor
+++ b/app/StateStores.App.Blazor/_Imports.razor
@@ -1,4 +1,8 @@
-﻿@using System.Net.Http
+﻿@using System
+@using System.Net.Http
+@using System.Threading
+@using System.Reactive.Linq
+@using System.Collections.Generic
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -7,3 +11,6 @@
 @using Microsoft.JSInterop
 @using StateStores.App.Blazor
 @using StateStores.App.Blazor.Shared
+@using StateStores.Redis
+@using StateStores
+
