Add hostsettings, add counter2, add darkmode

--- a/app/StateStores.App.Blazor/Pages/Counter2.razor
+++ b/app/StateStores.App.Blazor/Pages/Counter2.razor
@@ -1,8 +1,8 @@
-﻿@page "/counter"
+﻿@page "/counter2"
 @inject IStateStore stateStore
 @implements IDisposable
 
-<h1>Counter</h1>
+<h1>@GetType().Name</h1>
 
 <p>Current count: @currentCount</p>
 
