Refactor redis using const keys, add variable counter page , update config

--- a/app/StateStores.App.Blazor/Pages/Counter.razor
+++ b/app/StateStores.App.Blazor/Pages/Counter.razor
@@ -1,14 +1,18 @@
-﻿@page "/counter"
+﻿@page "/counter/{name}"
 @inject IStateStore stateStore
 @implements IDisposable
 
-<h1>Counter</h1>
+<h1>Counter @Name</h1>
 
 <p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCountAsync">Click me</button>
 
 @code {
+
+    [Parameter]
+    public string Name { get; set; }
+
     private int currentCount = 0;
 
     private IStateStoreProxy<int> proxy;
@@ -18,14 +22,16 @@
     private async Task IncrementCountAsync()
     {
        if (currentCount == 0) await proxy.AddAsync(0);
-       await proxy.UpdateAsync(currentCount, currentCount + 1);
+       var limit = currentCount + 10000;
+       for (int i = currentCount; i < limit; i++)
+            await proxy.UpdateAsync(i, i + 1);
     }
 
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
 
-        proxy = stateStore.CreateProxy<int>(GetType().AssemblyQualifiedName + ".count");
+        proxy = stateStore.CreateProxy<int>(GetType().AssemblyQualifiedName + "_" + Name);
 
         disposable = proxy           
             .OnNext()
