--- a/app/StateStores.App.Blazor/_Imports.razor
+++ b/app/StateStores.App.Blazor/_Imports.razor
@@ -11,7 +11,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using StateStores.App.Blazor
-@using StateStores.App.Blazor.Shared
+@using StateStores.App.Blazor.Views
 @using StateStores.Redis
 @using StateStores
 
