--- a/app/StateStores.App.Blazor/Views/NavMenu.razor
+++ b/app/StateStores.App.Blazor/Views/NavMenu.razor
@@ -13,6 +13,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="statePageInt32">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> States
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
