--- a/app/StateStores.App.Blazor/Views/NavMenu.razor
+++ b/app/StateStores.App.Blazor/Views/NavMenu.razor
@@ -14,7 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="statePageInt32">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> States
+                <span class="oi oi-list-rich" aria-hidden="true"></span> States of Int32
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="statePageString">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> States of String
             </NavLink>
         </li>
         <li class="nav-item px-3">
