--- a/app/StateStores.App.Blazor/Views/StateView.razor
+++ b/app/StateStores.App.Blazor/Views/StateView.razor
@@ -2,7 +2,7 @@
 @typeparam TState
 @implements IDisposable
 
-<h1>StateView of @typeof(TState).Name</h1>
+<h1>States of type [@typeof(TState).FullName]</h1>
 
 
 @if (states == null)
