--- a/app/StateStores.App.Blazor/_Imports.razor
+++ b/app/StateStores.App.Blazor/_Imports.razor
@@ -12,6 +12,7 @@
 @using Microsoft.JSInterop
 @using StateStores.App.Blazor
 @using StateStores.App.Blazor.Views
+@using static StateStores.App.Blazor.Util.StyleGenerator
 @using StateStores.Redis
 @using StateStores
 
