--- a/app/StateStores.App.Blazor/Pages/Index.razor
+++ b/app/StateStores.App.Blazor/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>State View</h1>
 
-Welcome to your new app.
+- Go to <a href="state/stateName">state/{<i style="@GetStyle(@"stateName")">stateName</i>}</a> to add, update, or remove a state.
+<br/>
+- Go to <a href="statePageString">statePageString</a> to view all string-states.
