--- a/app/StateStores.App.Blazor/Views/NavMenu.razor
+++ b/app/StateStores.App.Blazor/Views/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">StateStores.App.Blazor</a>
+    <a class="navbar-brand" href="">@GetType().Assembly.GetName().Name</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,11 +20,6 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="statePageString">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> States of String
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
     </ul>
