--- a/app/StateStores.App.Blazor/Views/StringStateView.razor
+++ b/app/StateStores.App.Blazor/Views/StringStateView.razor
@@ -2,7 +2,7 @@
 @implements IDisposable
 
 <h1 style="float: left; margin-right: 15px">State of</h1>
-<h1 style="@GenerateFromText(Name)">@Name</h1>
+<h1 style="@GetStyle(Name)">@Name</h1>
 
 @if(String.Equals(CurrentState, NO_STATE))
 {
@@ -12,13 +12,13 @@ else
 {
    <div class="form-group">
       <label for="inputCurrentState">Current:</label>
-      <input style="@GenerateFromText(CurrentState)" 
+      <input style="@GetStyle(CurrentState)" 
             type="text" class="form-control" 
             id="inputCurrentState" @bind="@CurrentState" 
             readonly />
       <br />
       <label for="inputNextState">Next:</label>
-      <input style="@GenerateFromText(NextState)" 
+      <input style="@GetStyle(NextState)" 
             type="text" class="form-control" 
             id="inputNextState" @bind="@NextState" />
       <br />
