Breaking Change: Rename CreateChannel to ToChannel

--- a/app/StateStores.App.Blazor/Views/StringStateView.razor
+++ b/app/StateStores.App.Blazor/Views/StringStateView.razor
@@ -91,7 +91,7 @@ else
    {
       await base.OnParametersSetAsync();
 
-      channel = stateStore.CreateChannel<string>(Name);
+      channel = stateStore.ToChannel<string>(Name);
 
       disposable = channel
          .OnNext()     
